# pycurltx

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yml  python-package-conda.yml
src/httpx_pycurl/: __init__.py  curl.py  transport.py
src/pycurltx/: __init__.py  transport.py
tests/: bench.py  conftest.py  httpx-tests.patch  test_curl.py  test_transport.py
tests/nginx/: nginx.conf
