[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "httpx-pycurl"
version = "0.0.2"
description = "An httpx transport powered by pycurl"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "pycurl>=7.45", "certifi"]
license = "MIT"
license-file = "LICENSE"

[project.urls]
Homepage = "https://www.github.com/dholth/httpx-pycurl"

[project.optional-dependencies]
dev = ["pytest>=8.2"]
test = ["pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["src/httpx_pycurl"]

[tool.pytest]
norecursedirs = ["httpx"]
pythonpath = ["src"]

[tool.ruff]
exclude = ["httpx"]

[tool.ruff.lint]
extend-select = ["I"]
